--- a/index.html
+++ b/index.html
@@ -22,18 +22,21 @@ SOFTWARE.
 <!doctype HTML>
 <html>
 <head>
-	<title>Make-Believe (R13)</title>
+	<title>Make-Believe (R14)</title>
 	<script src="jquery.min.js"></script>
+	<script src="defiant.min.js"></script>
 	<script src="vkbeautify.0.99.00.beta.js"></script>
 	<script src="beliefUpdate_worker.js"></script>
 	<script src="equationFunctions.js"></script>
 	<script src="sylvester.js"></script>
 	<script src="dagre.min.js"></script>
 	<script src="menu.js"></script>
+	<script src="utils.js"></script>
+	<script src="parsing.js"></script>
 	<link href="menu_styles.css" type="text/css" rel="stylesheet" />
 	<script src="menu_styles.js"></script>
 	<script>
-	var titlePostfix = "Make-Believe (R13)";
+	var titlePostfix = "Make-Believe (R14)";
 	var openBns = [];
 	var currentBn = null;
 
@@ -95,22 +98,39 @@ SOFTWARE.
 		return null;
 	}
 
-	function fileLoaded(inp) {
+	function fileLoaded(inp, callback) {
+		var fileExts = {xdsl:true,dne:true};
 		var file = inp.files[0];
+
+		var fileName = baseName(file.name);
+		var format = file.name.replace(/^.*\.([^.]*)$/, '$1');
+		/// Assume xdsl if extension not recognised (XXX probably should at least throw a warning before
+		/// the inevitable failure to load anything)
+		console.log(format);
+		if (!fileExts[format]) {
+			format = "xdsl";
+		}
+
 		console.debug(file);
 		var reader = new FileReader();
 		reader.onload = function(e) {
-			openBns.push(new BN({source: e.target.result, outputEl: $(".bnview")}));
+			openBns.push(new BN({source: e.target.result, outputEl: $(".bnview"), format: format}));
 			currentBn = openBns[openBns.length-1];
-			currentBn.fileName = baseName(file.name);
+			currentBn.fileName = fileName;
 			$(".status").text(currentBn.nodes.length+" nodes");
+			if (callback)  callback();
 		}
 		reader.readAsText(file);
 	}
 
 	function loadFromServer(fileName, callback) {
+		var fileExts = {xdsl:true,dne:true};
+		var format = fileName.replace(/^.*\.([^.]*)$/, '$1');
+		if (!fileExts[format]) {
+			format = "xdsl";
+		}
 		$.get(fileName, function(data) {
-			openBns.push(new BN({source: data, outputEl: $(".bnview")}));
+			openBns.push(new BN({source: data, outputEl: $(".bnview"), format: format}));
 			currentBn = openBns[openBns.length-1];
 			currentBn.fileName = baseName(fileName);
 			document.title = baseName(fileName) + " - " + titlePostfix;
@@ -599,17 +619,68 @@ SOFTWARE.
 
 			console.log(bn.nodes);
 
-
+			this.loadPostprocess();
+		},
+		load_dne: function(dneText) {
+			var bn = this;
+			var grammar = new Grammar($('.dneGrammar')[0].textContent);
+			console.log(dneText);
+			window.globalDneText = dneText;
+			var om = grammar.createTree(dneText);
+			console.log(om);
+			var bnet = JSON.search(om, '//*[type="BLOCK_STATEMENT"][children[1]="bnet"]')[0];
+			console.log(bnet);
+			var nodes = JSON.search(bnet, '//*[type="BLOCK_STATEMENT"][children[1]="node"]');
+			for (var ni=0; ni<nodes.length; ni++) {
+				var omNode = nodes[ni];
+				console.log(omNode);
+				/// ASSUME represents a text node?
+				var skipNode = false;
+				try {
+					skipNode = JSON.search(omNode, '//*[children[1]="kind"]/children[3]/children')[0]=="ASSUME";
+				}
+				catch (e) { skipNode = true; }
+				if (skipNode)  continue;
+				var centerPos = JSON.search(omNode, '//*[children[1]="center"]/children[3]/children')[0].replace(/[\(\)\s]/g, '')._splitNotEmpty(/,/);
+				var states = JSON.search(omNode, '//*[children[1]="states"]/children[3]/children')[0].replace(/[\(\)\s]/g, '')._splitNotEmpty(/,/);
+				states = states.map(function(x){ return {id: x} });
+				var cpt = null;
+				try {
+					cpt = JSON.search(omNode, '//*[children[1]="probs"]/children[3]/children')[0].replace(/[\(\)\s\n\r]|&[^&;]+;/g, '')._splitNotEmpty(/,/);
+				}
+				catch (e) {}
+				console.log("CPT:", cpt);
+				var node = new Node({
+					id: omNode.children[1],
+					parents: JSON.search(omNode, '//*[children[1]="parents"]/children[3]/children')[0].replace(/[\(\)\s]/g, '')._splitNotEmpty(/,/),
+					states: states,
+					cpt: cpt,
+					pos: {x: Number(centerPos[0]), y: Number(centerPos[1])},
+					size: {width: 80, height: 30},
+				});
+				bn.nodes.push(node);
+				bn.nodesById[node.id] = node;
+				console.log(node);
+			}
+			this.loadPostprocess();
+		},
+		/** After basic loading, need to run various cleanups, replace named objects with object points,
+		    store things in more optimised form, etc. **/
+		loadPostprocess: function() {
+			var bn = this;
 			/// Replace references to parent ids, with references to node cache
 			/// and index each node''s children
 			/// The var i in bn.nodes approach causes a 4x slowdown in inference!
-			/// Presumably because intId can't be pegged as an int
+			/// Presumably because intId can't be pegged as an int.
+			/// Update: I later learnt for x in arr forces x to always be a string
+			/// based on the JS specification. Odd.
 			for (var i=0; i<bn.nodes.length; i++) {
 			//for (var i in bn.nodes) {
 				var node = bn.nodes[i];
 				/// For fast referencing (without going to a dict lookup)
 				node.intId = i;
 				for (var j in node.parents) {
+					console.log(node.parents, j, node.parents[j]);
 					node.parents[j] = bn.nodesById[node.parents[j]];
 					node.parents[j].children.push(node);
 				}
@@ -621,7 +692,7 @@ SOFTWARE.
 			/// Set uniform CPTs for decision nodes
 			for (var i in bn.nodes) {
 				var node = bn.nodes[i];
-				if (node.type == "decision") {
+				if (node.type == "decision" || !node.cpt) {
 					var len = node.numParentCombinations()*node.states.length;
 					var cpt = [];
 					for (var j=0; j<len; j++) {
@@ -1608,7 +1679,7 @@ SOFTWARE.
 		saveFile: function() {
 			$("a#download")
 				.attr('href', 'data:text/plain;base64,'+window.btoa(currentBn.save_xdsl()))
-				.attr('download', currentBn.fileName)
+				.attr('download', currentBn.fileName.replace(/\.\w*$/, '.xdsl'))
 				[0].click();
 		},
 		updateBN: function() {
@@ -1688,7 +1759,7 @@ SOFTWARE.
 	};
 
 	$(document).ready(function() {
-		var exampleBns = "Asia.xdsl|Continuous Test.xdsl|RS Latch.xdsl|Umbrella.xdsl|Water.xdsl".split(/\|/);
+		var exampleBns = "Asia.xdsl|Cancer.dne|Continuous Test.xdsl|RS Latch.xdsl|Umbrella.xdsl|Water.xdsl".split(/\|/);
 		var exampleBnActions = [];
 		for (var i in exampleBns) {
 			/// Need html escape function
@@ -1944,7 +2015,7 @@ SOFTWARE.
 </head>
 <body>
 	<div class="toolbar" style="display: none;">
-		<input type="file" id="openFile" style="display:none;" onchange="fileLoaded(this)" accept=".xdsl">
+		<input type="file" id="openFile" style="display:none;" onchange="fileLoaded(this, updateBN)" accept=".xdsl,.dne">
 		<button type="button" onclick="app.loadFile()">Load File</button>
 		<button type="button" onclick="app.saveFile()">Save File</button>
 		<button onclick="app.updateBN()">Update</button>
@@ -1966,5 +2037,27 @@ SOFTWARE.
 	<div class=b>b</div>
 	<div class=c>c</div-->
 	<a id="download" href="" download=""></a>
+	<script type="text/plain" class="dneGrammar">
+		DNE = DNE_ITEM*
+		DNE_ITEM! = COMMENT | STATEMENT@ | BLANK
+		COMMENT! = /\/\/.*/ EOL
+		WSC! = /\s*/ COMMENT? /\s*/
+		WSC_REQ! = /\s+/ COMMENT? /\s*/ | /\s*/ COMMENT? /\s+/
+		BLANK = WSC EOL
+		EOL = /\r?\n|$/
+		STATEMENT! = ASSIGN_STATEMENT@ | BLOCK_STATEMENT@
+		BLOCK_STATEMENT = WSC BLOCK_TYPE WSC_REQ NAME WSC /\{/! WSC BLOCK_BODY WSC /\}/! WSC /;/! WSC
+		ANON_BLOCK_EXPR = WSC BLOCK_TYPE WSC /\{/! WSC BLOCK_BODY WSC /\}/! WSC
+		BLOCK_BODY = DNE_ITEM*
+		ASSIGN_STATEMENT = WSC NAME WSC /=/ WSC ASSIGN_EXPR WSC /;/! WSC
+		ASSIGN_EXPR! = ANON_BLOCK_EXPR@ | BASIC_EXPR@
+		BASIC_EXPR = /"/ DQ_VALUE@! /"/ | /'/ SQ_VALUE@! /'/ | UQ_VALUE@!
+		DQ_VALUE = /(\\.|[^"])*/
+		SQ_VALUE = /(\\.|[^'])*/
+		UQ_VALUE = /[^;]*/
+		NAME! = ID@
+		BLOCK_TYPE! = ID@
+		ID! = /[a-zA-Z][a-zA-Z0-9]*/@
+	</script>
 </body>
 </html>
